fix(game, login) : z-index 수정을 통한 오류 수정 feat(game) : 버튼 위치 수정

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -78,6 +78,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 10;
     transition: right 0.5s ease-out;
     color: #e0d8c3;
     padding-top: 20px;
@@ -119,8 +120,8 @@ a:hover {
 /* 게임 내 버튼 */
 .game-container > .game-button {
     position: absolute;
-    top: 8%;
-    left: 7%;
+    top: 7%;
+    left: 46%;
     padding: 10px 20px;
     font-size: 16px;
     z-index: 10;
